--- a/Makefile.in
+++ b/Makefile.in
@@ -5,18 +5,10 @@ DATAROOTDIR = @datarootdir@
 BINDIR = @bindir@
 MANDIR = @mandir@
 
-CURL_CONFIG = /usr/bin/curl-config
-CURL_LIBS = $(shell $(CURL_CONFIG) --libs)
-CURL_CFLAGS = $(shell $(CURL_CONFIG) --cflags)
-
-XML2_CONFIG = /usr/bin/xml2-config
-XML2_LIBS = $(shell $(XML2_CONFIG) --libs)
-XML2_CFLAGS = $(shell $(XML2_CONFIG) --cflags)
-
 CC = @CC@
 
-LIBS += -L/usr/lib $(CURL_LIBS) $(XML2_LIBS)
-CFLAGS += -I/usr/include $(CURL_CFLAGS) $(XML2_CFLAGS)
+LIBS = @curl_LIBS@ @xml2_LIBS@
+CFLAGS = @curl_CFLAGS@ @xml2_CFLAGS@
 
 all: portdbc
 
