--- a/Makefile.in
+++ b/Makefile.in
@@ -8,12 +8,12 @@ MANDIR = @mandir@
 CC = @CC@
 
 LIBS = @curl_LIBS@ @xml2_LIBS@
-CFLAGS = @curl_CFLAGS@ @xml2_CFLAGS@
+CFLAGS = -Wall -O2 @curl_CFLAGS@ @xml2_CFLAGS@
 
 all: portdbc
 
-portdbc: portdbc.c
-	$(CC) -Wall $(CFLAGS) -o portdbc portdbc.c $(LIBS)
+portdbc: defines.h utils.h utils.c portdbc.c
+	$(CC) $(CFLAGS) utils.c portdbc.c $(LIBS) -o portdbc
 
 clean:
 	@rm -f portdbc
